--- a/packages/admin-dashboard/src/locales/en/zones.json
+++ b/packages/admin-dashboard/src/locales/en/zones.json
@@ -14,7 +14,7 @@
         "createdAt": "Established in",
         "updatedAt": "Updated by",
         "openMenu": "Open menu",
-        "copyId": "Copy ID",
+        "copyId": "Copy identifier",
         "viewZone": "View zone",
         "columns": "Columns"
     },
