--- a/packages/admin-dashboard/src/locales/en/permissions.json
+++ b/packages/admin-dashboard/src/locales/en/permissions.json
@@ -32,7 +32,7 @@
         "description": "Grants country entitlements"
     },
     "Customer": {
-        "title": "Customer",
+        "title": "Client",
         "description": "Grants rights to the client"
     },
     "CustomerGroup": {
@@ -76,7 +76,7 @@
         "description": "Grants rights on TaxRate"
     },
     "Seller": {
-        "title": "Seller",
+        "title": "Vendor",
         "description": "Grants powers to the vendor"
     },
     "StockLocation": {
