--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -531,7 +531,7 @@
   "cancelled": "Anulowane",
   "modifying": "Modyfikacja",
   "inRealization": "W realizacji",
-  "logInHeader": "Zaloguj się do Vendure",
+  "logInHeader": "Zaloguj się do Deenruv",
   "userName": "Nazwa użytkownika",
   "password": "Hasło",
   "rememberMe": "Zapamiętaj mnie",
@@ -540,7 +540,7 @@
   "photoBy": "Zdjęcie autorstwa",
   "unsplash": "Unsplash",
   "poweredBy": "Powered by",
-  "logVendure": "Zaloguj się do Vendure",
+  "logVendure": "Zaloguj się do Deenruv",
   "awesomeMenu": {
     "activeAdministratorsValue": "Aktywni administratorzy ({{value}})",
     "activeAdministrators": "Aktywni administratorzy",
@@ -561,6 +561,8 @@
   },
   "language": "Język",
   "logOut": "Wylogowanie",
+  "logOutConfirmation": "Czy na pewno chcesz się wylogować?",
+  "logOutConfirmationDescription": "Po wylogowaniu zostaniesz przekierowany do strony logowania. Twoja sesja zostanie zakończona.",
   "clear": "Wyczyść",
   "clearCache": "Wyczyść pamięć podręczną",
   "themeLight": "Światło",
