--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -488,6 +488,7 @@
     "promotions": "Promotions"
   },
   "menu": {
+    "adminUiV2": "Admin UI",
     "extensions": "extensions",
     "dashboard": "desktop",
     "status": "status",
