--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -482,6 +482,7 @@
   },
   "menuGroups": {
     "shop": "Mój sklep",
+    "assortment": "Asortyment",
     "settings": "Ustawienia",
     "users": "Użytkownicy",
     "shipping": "Wysyłka i płatności",
