--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -417,7 +417,10 @@
     "copyURL": "Copy URL",
     "open": "Open",
     "edit": "Edit",
-    "Przebuduj search index": "Rebuild search index",
+    "rebuildSerachIndex": "Rebuild search index",
+    "fastLinks": "Quick links",
+    "systemStatus": "System status",
+    "globalSettings": "Global settings",
     "delete": "Delete",
     "preview": "Preview",
     "details": "Details",
