--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -417,7 +417,10 @@
   "copyURL": "Kopiuj URL",
   "open": "Otwórz",
   "edit": "Edytuj",
-  "Przebuduj search index": "Przebuduj search index",
+  "rebuildSerachIndex": "Przebuduj search index",
+  "fastLinks": "Szybkie linki",
+  "systemStatus": "Status systemu",
+  "globalSettings": "Ustawienia globalne",
   "delete": "Usuń",
   "preview": "Podgląd",
   "details": "Szczegóły",
