--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -141,7 +141,9 @@
     "currencyCode": "Waluta",
     "totalQuantity": "Liczba",
     "postalCode": "Kod pocztowy",
-    "image": "Obraz"
+    "image": "Obraz",
+    "preview": "Podgląd",
+    "tags": "Tagi"
   },
   "actionsMenu": {
     "title": "Działania",
