--- a/packages/admin-dashboard/src/locales/en/table.json
+++ b/packages/admin-dashboard/src/locales/en/table.json
@@ -143,7 +143,8 @@
         "postalCode": "Postcode",
         "image": "Image",
         "preview": "Preview",
-        "tags": "Tags"
+        "tags": "Tags",
+        "title": "Title"
     },
     "actionsMenu": {
         "title": "Activities",
