--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -143,7 +143,8 @@
     "postalCode": "Kod pocztowy",
     "image": "Obraz",
     "preview": "Podgląd",
-    "tags": "Tagi"
+    "tags": "Tagi",
+    "title": "Tytuł"
   },
   "actionsMenu": {
     "title": "Działania",
